# blurt

./: .gitignore  CLAUDE.md  README.md  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blurt/: __init__.py  __main__.py  app.py  cli.py  config.py  desktop.py  installer.py
blurt/api/: routes.py  schemas.py
blurt/assets/: Blurt.icns
blurt/core/: dateref.py  embedder.py  exporter.py  indexer.py  retriever.py  secrets.py
blurt/db/: __init__.py  database.py  schema.sql
blurt/static/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  DECISIONS.md  SCRATCHPAD_PRD.md  SECURITY.md  STATE.md  UX.md  test_suite.py
scripts/: blurt  dev-app.sh  dev_app.py  lab.sh  make-icon.py  make_demo.py  seed_demo.py  startup.sh  winddown.sh
tests/: test_unit.py
