[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blurt"
version = "1.1.2"
description = "A local-first scratchpad that surfaces the note you already wrote, as you type."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "httpx>=0.26",
    "sqlite-vec>=0.1.6",
    "pywebview>=5",  # native desktop window (uses the OS webview, no bundled browser)
    "cryptography>=42",  # Fernet, to encrypt jotted secrets at rest
    "keyring>=24",       # holds the secret encryption key in the OS keychain (no master password)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "faker>=24", "ruff>=0.4"]

# `blurt` is the friendly launcher (native window, checks Ollama, starts the
# server). `blurt-serve` is the bare server for advanced/headless use.
[project.scripts]
blurt = "blurt.cli:main"
blurt-serve = "blurt.__main__:main"

[tool.setuptools]
packages = ["blurt", "blurt.api", "blurt.core", "blurt.db"]

# Ship the UI, the SQL schema, and the app icon inside the wheel, or an install has no
# front end (and no icon to stamp into the double-click Blurt.app).
[tool.setuptools.package-data]
blurt = ["static/*", "db/*.sql", "assets/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]  # so `import blurt` works under bare `pytest` (and in CI)
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"docs/test_suite.py" = ["F", "E", "B"]
"tests/*" = ["F", "E", "B"]
